# hyppo_tunes_server

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
proto/: song_infos.proto  songs.proto
src/: config.rs  main.rs
src/core/: mod.rs
src/core/data/: mod.rs
src/core/data/context/: mod.rs  songs_system_db_context.rs
src/core/data/entity/: mod.rs  song.rs  song_info.rs
src/core/repository/: mod.rs  songs_repository.rs
src/presentation/: mod.rs
src/presentation/songs_api/: mod.rs  startup.rs
src/presentation/songs_api/services/: mod.rs  song_infos_sender_service.rs  songs_sender_service.rs
src/presentation/songs_api/utils/: async_file_reader.rs  auto_updater.rs  mod.rs
