[package]
name = "hyppo_tunes_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
tonic = "0.5"
prost = "0.8"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"
async-stream = "0.2"
rusqlite = { version = "0.26.1", features = ["bundled"] }
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"
itertools = "0.10.1"
hotwatch = "0.4.6"


[build-dependencies]
tonic-build = "0.5"
